--- a/index.html
+++ b/index.html
@@ -469,7 +469,8 @@
             
             // Image properties form data
             const [imagePropertiesForm, setImagePropertiesForm] = React.useState({
-                site_location: 'Toll',
+                image_type: 'RGB',
+				site_location: 'Toll',
                 scene: 'day',
                 camera_position: 'front',
                 is_rain: false
@@ -1770,6 +1771,7 @@
                     ...annotations,
                     image: {
                         ...annotations.image,
+						image_type: imagePropertiesForm.image_type,
                         site_location: imagePropertiesForm.site_location,
                         scene: imagePropertiesForm.scene,
                         camera_position: imagePropertiesForm.camera_position,
@@ -1806,6 +1808,7 @@
                     ...annotations,
                     image: {
                         ...annotations.image,
+						image_type: imagePropertiesForm.image_type,
                         site_location: imagePropertiesForm.site_location,
                         scene: imagePropertiesForm.scene,
                         camera_position: imagePropertiesForm.camera_position,
@@ -2186,6 +2189,7 @@
 					...annotations,
 					image: {
 						...annotations.image,
+						image_type: imagePropertiesForm.image_type,
 						site_location: imagePropertiesForm.site_location,
 						scene: imagePropertiesForm.scene,
 						camera_position: imagePropertiesForm.camera_position,
@@ -3561,7 +3565,57 @@
                                         </select>
                                     </div>
                                 </div>
+								
+								<div className="form-row">
+									<div className="form-group">
+										<label className="form-label">Camera Position</label>
+										<select
+											className="input-field input-small"
+											value={imagePropertiesForm.camera_position}
+											onChange={(e) =>
+												setImagePropertiesForm(prev => ({ ...prev, camera_position: e.target.value }))
+											}
+										>
+											<option value="front">Front</option>
+											<option value="rear">Rear</option>
+											<option value="side">Side</option>
+										</select>
+									</div>
 
+									<div className="form-group">
+										<label className="form-label">Image Type</label>
+										<select
+											className="input-field input-small"
+											value={imagePropertiesForm.image_type}
+											onChange={(e) =>
+												setImagePropertiesForm(prev => ({ ...prev, image_type: e.target.value }))
+											}
+										>
+											<option value="RGB">RGB</option>
+											<option value="gray">gray</option>
+										</select>
+									</div>
+								</div>
+
+								<div className="form-row">
+									<div className="form-group" style={{ display: 'flex', alignItems: 'flex-end', paddingBottom: '4px' }}>
+										<label className="checkbox-item">
+											<input
+												type="checkbox"
+												checked={imagePropertiesForm.is_rain}
+												onChange={(e) =>
+													setImagePropertiesForm(prev => ({ ...prev, is_rain: e.target.checked }))
+												}
+											/>
+											Rain
+										</label>
+									</div>
+
+									{/* empty column keeps the grid alignment consistent */}
+									<div className="form-group" />
+								</div>
+
+								'''
                                 <div className="form-row">
                                     <div className="form-group">
                                         <label className="form-label">Camera Position</label>
@@ -3586,6 +3640,7 @@
                                         </label>
                                     </div>
                                 </div>
+								'''
 
                                 <hr style={{ border: 'none', borderTop: '1px solid rgba(255,255,255,0.1)', margin: '20px 0' }} />
 
@@ -4569,7 +4624,6 @@
     </script>
 </body>
 </html>
-
 
 
 
