just the text of save all jason etc

--- a/index.html
+++ b/index.html
@@ -3274,7 +3274,7 @@
                                                 background: 'linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%)'
                                             }}
                                         >
-                                            💾 Save All Annotated Images ({Object.keys(imageAnnotationsMap).filter(filename => imageAnnotationsMap[filename].annotations.objects.length > 0).length})
+                                            💾 Save All JSON + Annotated Images ({Object.keys(imageAnnotationsMap).filter(filename => imageAnnotationsMap[filename].annotations.objects.length > 0).length})
                                         </button>
                                     )}
 
@@ -4871,6 +4871,7 @@
     </script>
 </body>
 </html>
+
 
 
 
